--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -1,1 +1,15 @@
-<iframe src="{{chat.url}}" style="width:100%;height:100%"></iframe>
+<!--
+  This template loads for the 'tab.friend-detail' state (app.js)
+  'friend' is a $scope variable created in the FriendsCtrl controller (controllers.js)
+  The FriendsCtrl pulls data from the Friends service (service.js)
+  The Friends service returns an array of friend data
+-->
+<ion-view view-title="{{chat.name}}">
+    <ion-content class="padding">
+        <img ng-src="{{chat.face}}" style="width: 64px; height: 64px">
+        <p>
+            {{chat.href}}
+        </p>
+        <iframe ng-src="{{trustSrc(chat.href)}}" width="1500px" height="500px"></iframe>
+    </ion-content>
+</ion-view>
