--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,7 +1,8 @@
-<ion-view view-title="Chats">
+<ion-view view-title="Athletes">
   <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap"  ng-click="go('tab/wods/'+chat.id)"
+                on-swipe-right="go('tab/chats/'+chat.id)">
         <img ng-src="{{chat.face}}">
         <h2>{{chat.name}}</h2>
         <p>{{chat.href}}</p>
